# AutoTrack

./: .gitignore  autotrack.postman_collection.json  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  citas.py  clientes.py  facturas.py  historial_precios.py  otes.py  productos.py  reportes.py  roles.py  router.py  usuarios.py  vehiculos.py
backend/app/core/: config.py  logging_conf.py  security.py
backend/app/db/: base.py  session.py
backend/app/db/models/: audit_log.py  cita.py  cliente.py  detalle_orden.py  factura.py  historial_precio.py  orden_trabajo.py  producto.py  rol.py  usuario.py  vehiculo.py
backend/app/db/repositories/: generic.py
backend/app/schemas/: auth.py  cita.py  cliente.py  detalle_orden.py  factura.py  historial_precio.py  orden_trabajo.py  producto.py  rol.py  shared.py  usuario.py  vehiculo.py
backend/app/seeds/: seed_data.py
backend/app/services/: __init__.py  auditing.py  billing.py  inventory.py  reporting.py  scheduling.py
backend/app/tests/: conftest.py  test_auth.py  test_clientes.py  test_otes.py
frontend/: .eslintrc.cjs  Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.js  main.js  main.tsx
frontend/src/api/: endpoints.js  endpoints.ts  http.js  http.ts
frontend/src/auth/: AuthContext.js  AuthContext.tsx  ProtectedRoute.js  ProtectedRoute.tsx
(+65 files in other folders)
