[tool.poetry]
name = "autotrack-backend"
version = "0.1.0"
description = "AutoTrack FastAPI backend for gestión de talleres automotrices"
authors = ["AutoTrack Team <dev@autotrack.local>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.1" }
SQLAlchemy = "^2.0.30"
mysqlclient = "^2.2.4"
alembic = "^1.13.2"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
python-multipart = "^0.0.9"
fastapi-pagination = "^0.12.25"
loguru = "^0.7.2"
sqlalchemy-utils = "^0.41.2"
typing-extensions = "^4.11.0"
python-dateutil = "^2.9.0.post0"
faker = "^24.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
httpx = "^0.27.0"
pytest-cov = "^5.0.0"

[tool.poetry.scripts]
app = "app.main:app"

[tool.poetry.plugins."alembic.environment"]
autotrack = "app.db.migrations:run_migrations_online"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
